Alignment fix

--- a/src/components/SummaryCard/SummaryCard.scss
+++ b/src/components/SummaryCard/SummaryCard.scss
@@ -30,8 +30,8 @@
   font-family: v.$spartan;
   font-size: 1.2rem;
   line-height: 2.5rem;
+  margin-top: auto;
   opacity: 0.5;
-  padding-top: 3rem;
   white-space: pre;
 
   > a {
